# SteamRec-AI

./: .gitignore  README.md
ConvertSteamScraperData/: Cargo.toml
ConvertSteamScraperData/src/: main.rs
steam_rec_ai/: ai.ipynb
steam_rec_ai/steam_rec_ai_gui/: .gitignore  package-lock.json  package.json  predictor.py  readme.txt
steam_rec_ai/steam_rec_ai_gui/convert_steam_link_to_predicton/: Cargo.toml
steam_rec_ai/steam_rec_ai_gui/convert_steam_link_to_predicton/src/: main.rs
steam_rec_ai/steam_rec_ai_gui/src/app/: Display.tsx  Loading.tsx  globalInterfaces.tsx  globals.css  layout.tsx  page.module.css  page.tsx
