[package]
name = "convert_steam_link_to_predicton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest =  { version = "0.12.4", features = ["blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.19.0"
serde = "1.0.203"
